refactor token related operations into an AccessTokenService, rename existing TokenService to EclipseTokenService, cleanup tests